--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 spring.application.name=Ecommerce-CRUD
 
 #DataSource Properties
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_crud
+spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce_crud1
 spring.datasource.username=root
 spring.datasource.password=admin
 
